stop screen from moving vertically on mobile safari

--- a/src/pages/Bundle.scss
+++ b/src/pages/Bundle.scss
@@ -1,4 +1,7 @@
 .show-bundle {
+    position: fixed;
+    top: 10px;
+    width: 100vw;
     img {
         width: 100%;
     }
